# Turing

./: Cargo.toml
machines/: 0n1n.json  basic.json  is_even.json  is_palindrome.json  unarry_add.json
src/: emulation.rs  interpretor.rs  main.rs  parse.rs
