[package]
name = "Turing"
version = "0.1.0"
edition = "2021"


[features]
default = ["animation"]

animation = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0.4"
